commit delete e multi modules

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <script src="directives/uiAlertDirective.js"></script>
   <script src="directives/uiData.js"></script>
   <script src="directives/uiTelefone.js"></script>
-  <script src="directives/uiAccordion.js"></script>
   <script src="services/contatosAPIService.js"></script>
   <script src="services/operadorasAPIService.js"></script>
   <script src="config/configProvider.js"></script>
   <script src="filters/nameFilter.js"></script>
   <script src="filters/ellipseFilter.js"></script>
-  <script src="services/serialGenerator.js"></script>
+  <script src="lib/serialGenerator/serialGenerator.js"></script>
+  <script src="lib/ui/uiAccordion.js"></script>
   <script src="config/configValue.js"></script>
   <script src="lib/js/angular-messages.js"></script>
   <script src="lib/js/angular-locale_pt-br.js"></script>
