--- a/index.html
+++ b/index.html
@@ -20,80 +20,15 @@
   <script src="lib/ui/uiAccordion.js"></script>
   <script src="config/configValue.js"></script>
   <script src="lib/js/angular-messages.js"></script>
+  <script src="lib/js/angular-route.js"></script>
+  <script src="config/configRoute.js"></script>
+    <script src="controllers/detalhesContato.js"></script>
+  <script src="controllers/novoContatoController.js"></script>
   <script src="lib/js/angular-locale_pt-br.js"></script>
 </head>
-<body ng-controller="listaTelefonicaController">
-    <div class="jumbotron">
-        <ui-accordions>
-            <ui-accordion title="Accordion 1">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            </ui-accordion>
-            <ui-accordion title="Accordion 2">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            </ui-accordion>
-            <ui-accordion title="Accordion 3">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            </ui-accordion>
-            <ui-accordion title="Accordion 4">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            </ui-accordion>
-        </ui-accordions>
+<body>
 
-        <h3>{{app}}</h3>
-        <ui-alert ng-show="error" title="Ops, aconteceu um problema">{{error}}</ui-alert>
-        <input type="text" ng-model="criterioBusca" placeholder="O que você está buscando ?" class="form-control">
-        <table class="table" ng-show="dados.length > 0">
-            <tr>
-                <th><input type="checkbox" title="Selecionar todos" ng-model="selecionarTodos" ng-click="selecionarTodosContatos(dados, selecionarTodos)"></th>
-                <th>Serial</th>
-                <th><a href="" ng-click="orderPor('nome')">Nome</a></th>
-                <th><a href="" ng-click="orderPor('telefone')">Telefone</a></th>
-                <th><a href="" ng-click="orderPor('operadora')">Operadora</a></th>
-                <th><a href="" ng-click="orderPor('data')">Data</a></th>
-                <th></th>
-            </tr>
-            <tr ng-repeat="dado in dados | filter: {nome:criterioBusca} | orderBy: criterioOrdernacao:direcaoOrdenacao" ng-class="{'selecionado negrito': dado.selecionado}">
-                <td> <input type="checkbox" ng-model="dado.selecionado"/> </td>
-                <td>{{dado.serial}}</td>
-                <td>{{dado.nome | name | ellipseFilter: 10}}</td>
-                <td>{{dado.telefone}}</td>
-                <td>{{dado.operadora.nome}}</td>
-                <td>{{dado.data | date:'dd/MM/yyyy'}}</td>
-            </tr>
-        </table>
-        <hr/>
-        <div ng-messages="contatoForm.nome.$error" class="alert-danger">
-            <div ng-message="required" ng-show="contatoForm.nome.$dirty">
-                Por favor, preencha o nome
-            </div>
-            <div ng-message="minlength">
-                Por favor, o campo nome precisa ter pelo menos 10 caracteres
-            </div>
-        </div>
-        <div ng-messages="contatoForm.telefone.$error" class="alert-danger">
-            <div ng-show="contatoForm.telefone.$dirty" ng-message="required">
-                Por favor, preencha o telefone DDDDD-DDDD
-            </div>
-            <div ng-message="pattern">
-                Por favor, preencha o telefone corretamente
-            </div>
-        </div>
-        <div ng-show="contatoForm.operadora.$error.required && contatoForm.operadora.$dirty" class="alert-danger">
-            Por favor, preencha a operadora
-        </div>
-
-        <form name="contatoForm">
-            <input type="text" ng-required="true" placeholder="nome" name="nome" ng-model="dado.nome" class="form-control" ng-minlength="10">
-            <input class="form-control" type="text" ng-model="dado.data" name="data" placeholder="Data" ui-date />
-            <input type="text" placeholder="telefone" ng-required="true" ng-required="true" name="telefone" ui-telefone ng-model="dado.telefone" class="form-control" ng-pattern="/^\d{4,5}-\d{4}$/" >
-            <select ng-model="dado.operadora" ng-required="true" name="operadora" ng-options="operadora.nome + '( ' + ( operadora.preco | currency) + ' )' group by operadora.categoria for operadora in operadoras | orderBy:'nome'" class="form-control">
-                <option value="">Selecione uma operadora</option>
-            </select>
-        </form>
-
-        <button ng-click="adicionarContato(dado)" class="btn btn-primary btn-block" style="margin-top: 10px" ng-disabled="contatoForm.$invalid">Adicionar contato</button>
-        <button ng-click="apagarContato(dados)" class="btn btn-danger btn-block" ng-disabled="possuiDadoSelecionado(dados)" style="margin-top: 10px">Apagar contatos</button>
-    </div>
+    <div ng-view=""></div>
     <div ng-include="'footer.html'" ></div>
 </body>
 </html>
