adicionando loadingInterceptor.js

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="config/configValue.js"></script>
     <script src="config/interceptorsConfig.js"></script>
     <script src="interceptors/errorInterceptor.js"></script>
+    <script src="interceptors/loadingInterceptor.js"></script>
   <script src="lib/js/angular-messages.js"></script>
   <script src="lib/js/angular-route.js"></script>
   <script src="config/configRoute.js"></script>
@@ -30,8 +31,10 @@
   <script src="lib/js/angular-locale_pt-br.js"></script>
 </head>
 <body>
-
-    <div ng-view=""></div>
+<div class="jumbotron" ng-show="loading">
+    <h5>Carregando aguarde...</h5>
+</div>
+    <div ng-view="" ng-hide="loading"></div>
     <div ng-include="'view/footer.html'" ></div>
 </body>
 </html>
